# c_array_tools

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  example.bat  example.c  example.sh  sonar-project.properties  test.bat  test.sh
.github/workflows/: clang-format.yml  cmake.yml  codeql.yml  sonarqube.yml
src/: c_array.c  c_array.h  c_array_mt.c
test/: test.bat  test.c  test.sh  test_double.c  test_float.c  test_int.c  test_long.c  test_mt.c  test_short.c  utest.h
tests/: test_double.c  test_float.c  test_int.c  test_long.c  test_mt.c  test_short.c  utest.h
